2006-09-13  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* README: Added configuration information.

	* configure.ac: Added host system checking. Added FlexLexer.h
	packaging.

	* src/dlvhex/ASPsolver.cpp (callSolver): Added comment.

	* src/dlvhex/GuessCheckModelGenerator.cpp (compute): Cleaned up code.

	* src/dlvhex/Makefile.am: Add FlexLexer.h to distribution directory.

	* src/dlvhex/dlvhex.cpp (printLogo): Added version number to logo.

2006-09-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/Makefile.am: Bump libdlvhexbase version to 2:0:0.

	* configure.ac: Bump dlvhex version to 1.2.

	* include/dlvhex/PluginInterface.h (PluginAtom::Answer):
	Shrinkwrap the output tuples with a boost::shared_ptr<>.
	* src/dlvhex/PluginInterface.cpp: Likewise.

	* src/dlvhex/ProcessBuf.cpp (ProcessBuf::ProcessBuf): Setup struct
	sigaction properly.
	(ProcessBuf::endoffile,ProcessBuf::close): Only close() valid file
	descriptors.

2006-08-20  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/DLVresultParserDriver.h
	(DLVresultParserDriver::parse): Added parameter for dlv
	errors.

	* include/dlvhex/globals.h: Added getVerboseStream() to return verbose
	output stream.

	* src/dlvhex/ASPsolver.cpp (callSolver): Improved verbose output.
	Moved maxint-directive to the end of the input program.

	* src/dlvhex/DLVresultParser.ypp: Keep track of dlv errors.

	* src/dlvhex/DLVresultParserDriver.cpp (parse): Call dlv-result parser
	with error-string parameter.

	* src/dlvhex/DLVresultScanner.lpp: Changed order of tokens.

	* src/dlvhex/ProcessBuf.cpp (open): Added redirection of STDERR.

	* src/dlvhex/dlvhex.cpp (main): Added defaults for global variables.
	Changed verbose-option to accept level.

	* src/dlvhex/globals.cpp (getVerboseStream): Added.

	* src/testsuite/dlvhex/ASPsolverTest.cpp (testExecution),
	(testResult): Added explanatory output.

2006-08-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
